samples/_failures_safe/1761201393_1222b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_48f1313d.c: In function ‘main’:
./samples/SAFE/__tmp_48f1313d.c:175:9: error: expected declaration or statement at end of input
  175 |         free_matrix(mat2);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_48f1313d.c:175:9: error: expected declaration or statement at end of input
